[tool.poetry]
name = "arquivos"
version = "0.1.0"
description = ""
authors = ["Lucas Vieira <lucasdavid.xavier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
matplotlib = "^3.6.1"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
